# python-package-template

./: .gitignore  README.md  makefile  requirements.txt  setup.cfg  setup.py
mylibrary/: __init__.py  mylibrary.py
python_package/: main_module.py
python_package/logger_module/: logger.py
python_package/sub_module_1/: some_class.py
python_package/sub_module_2/: some_module.py
python_package_module/: main_module.py
python_package_module/logger_module/: logger.py
python_package_module/sub_module_1/: some_class.py
python_package_module/sub_module_2/: some_module.py
tests/: test_main_module.py  test_python_package.py  test_sub_module_1.py  test_sub_module_2.py
