[metadata]
name = mylibrary
version = 0.1
author = FoodyFood
author_email = dx@outlook.ie
description = A library you can install using pip and use in other projects
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts = 
    mylibrary = mylibrary.__init__:main
